--- a/calculator/manifest.json
+++ b/calculator/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://mitanshu21.github.io/react-calculator/",
+  "start_url": "https://github.com/mixstam1821",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#dfe9f5",
